objects/Credit_Note_Line_Item__c/Credit_Note_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Credit Note Line Item</label>
    <nameField>
        <displayFormat>PR-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>