objects/Credit_Note_Line_Item__c/fields/Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes__c</fullName>
    <label>Credit Notes</label>
    <referenceTo>Credit_Notes__c</referenceTo>
    <relationshipLabel>Credit Note Line Items</relationshipLabel>
    <relationshipName>Credit_Note_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>