objects/Credit_Note_Line_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Note Line Items</relationshipLabel>
    <relationshipName>Credit_Note_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>