objects/Credit_Note_Line_Item__c/fields/Product_credit__c.field-meta.xml
<CustomField>
    <fullName>Product_credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Credit Note Line Items</relationshipLabel>
    <relationshipName>Credit_Note_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>