objects/Credit_Note_Line_Item__c/fields/Total_price__c.field-meta.xml
<CustomField>
    <fullName>Total_price__c</fullName>
    <formula>Sales_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>